# fiber-chat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  start.sh
.github/workflows/: publish.yml
docs/: fiber-chat-en.md  fiber-chat-zh.md
fiber-bundle/deploy/: deploy.sh  init-dev-chain.sh
fiber-bundle/deploy/contracts/: README.md
fiber-bundle/deploy/lnd-init/lnd-ingrid/: tls.cert
fiber-bundle/deploy/udt-init/src/: main.rs
fiber-bundle/nodes/: .ports
fiber-bundle/nodes/1/: config.yml
fiber-bundle/nodes/1/fiber/: permissions.bc
fiber-bundle/nodes/2/: config.yml
fiber-bundle/nodes/2/fiber/: permissions.bc
fiber-bundle/nodes/3/: config.yml
fiber-bundle/nodes/3/fiber/: permissions.bc
fiber-bundle/nodes/bootnode/: config.yml  dev.toml
fiber-bundle/nodes/cch/: config.yml
fiber-bundle/nodes/deployer/: config.yml
scripts/: build-release-bundle.sh  install-binaries.sh  start-fiber-network.sh
src/: main.rs
static/: app.js  index.html  styles.css
